--- a/recap/nodejs/recap/section22/views/404.ejs
+++ b/recap/nodejs/recap/section22/views/404.ejs
@@ -11,7 +11,11 @@
     <%- include("includes/index-header.ejs") %>
 
     
-    <h1><%=text%></h1>
+    <div style="height: 85vh; display: flex; justify-content: center; align-items: center; flex-direction: column; text-align: center;">
+        <!-- <div><%=text%></div> -->
+        <h1>404</h1>
+        <h2>This URL does not exist on the website</h2>
+    </div>
 
 
     <%- include("includes/index-footer.ejs") %>
