--- a/recap/nodejs/recap/section22/views/includes/html-head.ejs
+++ b/recap/nodejs/recap/section22/views/includes/html-head.ejs
@@ -19,6 +19,9 @@
     <script src="/js/main_header.js" defer></script>
     <script src="/js/globalValues.js" defer></script> <!--deferred-->
 
+    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
+
+
 
 
 
